# luckasapp

./: .gitignore  CHANGELOG.md  README.md  build.ps1  main.py  pyproject.toml  requirements.txt  version.json
.github/workflows/: ci.yml  process-servers.yml  release.yml  version.yml
core/: core_manager.py  proxy_controller.py
database/: db.py
distribution/: index.json  version.json
distribution/data/: healthy.json  metadata.json  server_metadata.json  servers.json  stats.json
distribution/stats/: stats.json
docs/: FULL_ARCHITECTURE_AUDIT_2026-06-14.md  TECHNICAL_AUDIT.md
models/: config.py  dataset.py  repository.py
repositories/: sources.py
scripts/: background_daemon.py  build_distribution.py  bump_version.py  check_responsive.py  client_scan_github.py  deploy_to_github.ps1  discover_repositories.py  download_cores.ps1  generate_changelog.py  install_telegram_sync_task.ps1  package_release.ps1  process_server_health.py  publish_distribution.py  refresh_configs.py  service_control.ps1  telegram_daemon.py  telegram_sync_publish.py  update_all.ps1  windows_service.py
services/: api_client.py  background_sync.py  collector.py  config_details.py  connection_verifier.py  dataset.py  discovery.py  github_distribution.py  github_sync.py  health.py  history.py  parser.py  server_processing.py  service_state.py  settings.py  telegram_collector.py  traffic.py  updater.py  windows_service_entry.py  xray_exporter.py
ui/: ConfigCard.qml  Main.qml  SectionPanel.qml  SpeedChart.qml  StatCard.qml  StatPill.qml  UsageBars.qml  bridge.py
workers/: async_runner.py
