[project]
name = "luckasapp"
version = "0.1.0"
description = "Modern V2Ray/Xray desktop client manager"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10",
  "httpx>=0.27",
  "orjson>=3.10",
  "pydantic>=2.8",
  "PySide6>=6.7",
  "SQLAlchemy>=2.0",
  "websockets>=13.0",
  "ping3>=4.0",
  "psutil>=6.0",
  "telethon>=1.36",
]

[tool.ruff]
line-length = 110
